weakReferenceTest